feat(doc): Added swagger doc
